Favorites Images post and get: Done

--- a/breed.html
+++ b/breed.html
@@ -21,7 +21,8 @@
         </div>
     </div>
 </section>
-let breeds = [];
+<script>
+    let breeds = [];
         let selectedBreed = null;
 
         // Function to fetch breeds from The Cat API
@@ -149,3 +150,5 @@ let breeds = [];
         function showBreeds() {
             fetchBreeds(); // Fetch and display the list of breeds when the "Breeds" link is clicked
         }
+
+</script>
